safari table row vertical align fix

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,5 +20,5 @@ input[type='checkbox'] {
 }
 
 tr {
-	vertical-align: baseline;
+	vertical-align: middle;
 }
